--- a/Login_SiceNet/app/src/main/res/values/strings.xml
+++ b/Login_SiceNet/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Login_SiceNet</string>
+    <string name="loading_failed">Error al cargar</string>
+    <string name="retry">Reintentar</string>
+    <string name="loading">Cargando...</string>
+    <string name="placeholder_success">Placeholder text</string>
 </resources>
